--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="password">password</string>
     <string name="registerButton">Register</string>
     <string name="loginButton">Login</string>
+    <string name="nameHint">name</string>
 </resources>
